# tmux-worktree

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DASHBOARD_REDESIGN_PLAN.md  INTRO.md  LICENSE  MANUAL.md  Makefile  README.md  design-qa.md  package-lock.json  package.json  tsup.config.ts  tsup.standalone.config.ts
app/: README.md  index.html  package-lock.json  package.json
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs
app/src-tauri/src/config/: hosts.rs  mod.rs  projects.rs
app/src-tauri/src/features/: automation.rs  feishu_bridge.rs  files.rs  layout.rs  mod.rs  pty.rs  terminal_control.rs
app/src-tauri/src/features/control_plane/: discovery.rs  hosts.rs  lifecycle.rs  local_rpc.rs  mod.rs  remote_rpc.rs  transport.rs
app/src-tauri/src/features/git/: fetch.rs  graph.rs  mod.rs  model.rs  runner.rs  status.rs
app/src-tauri/src/features/mobile_relay/: broker.rs  commands.rs  mod.rs  model.rs  network.rs  persistence.rs  runtime.rs
app/src-tauri/src/features/mobile_relay_v2/: commands.rs  enrollment_artifact.rs  management_child.rs  management_protocol_v2.rs  mod.rs
app/src-tauri/src/features/sessions/: activity.rs  agents.rs  catalog.rs  identity.rs  lifecycle.rs  mod.rs  tmux_runtime.rs  tmux_ui.rs
app/src-tauri/src/features/terminals/: lifecycle.rs  mod.rs  registry.rs
app/src-tauri/src/features/worktrees/: lifecycle.rs  mod.rs  model.rs  recovery.rs
app/src-tauri/src/ipc/: dashboard.rs  mod.rs  tw_rpc.rs
app/src-tauri/src/remote/: mod.rs  model.rs  ssh.rs
app/src-tauri/src/support/: atomic_file.rs  env.rs  mod.rs  process.rs  shell.rs
app/src-tauri/src/tests/: mod.rs
docs/: android-v2-architecture.md  relay-agent-transcript-lifecycle-extension-v1.md  relay-v2-contract.md  relay-v2-implementation-plan.md  remote-relay-android.md  terminal-input-ownership-alignment.md
native/relay-v2-broker-credential-state-store-core/: Cargo.toml  build.rs
native/relay-v2-broker-credential-state-store-core/src/: format.rs  lib.rs  store.rs
native/relay-v2-broker-credential-state-store-core/tests/: binary_contract.rs
native/relay-v2-broker-credential-state-store-core/tests/support/: mod.rs
native/relay-v2-broker-credential-state-store-napi/: Cargo.toml
native/relay-v2-broker-credential-state-store-napi/src/: lib.rs  port.rs  state.rs
native/relay-v2-broker-credential-state-store-platform-common/: Cargo.toml  build.rs
native/relay-v2-broker-credential-state-store-platform-common/src/: lib.rs  process_lifecycle.rs
native/relay-v2-broker-credential-state-store-platform-common/tests/: platform_common.rs
native/relay-v2-host-credential-atomic-file-cell-napi/: Cargo.toml
native/relay-v2-host-credential-atomic-file-cell-napi/src/: lib.rs
scripts/: check-docs.mjs  publish-bnpm.sh  relay-v2-broker-credential-native.mjs  relay-v2-host-credential-native.mjs  verify.sh
src/: automation.ts  canonicalTerminalControlClient.ts  canonicalWorktreePlacement.ts  cli.ts  commands.ts  config.ts  createTargetObservationV1.ts  dev.ts  feishuBridge.ts  feishuBridgeServer.ts  feishuBridgeStorage.ts  feishuReplyCard.ts  hosts.ts  larkCliBridge.ts  relayHost.ts  relayProtocol.ts  relayServer.ts  rpc.ts  rpcV2.ts  serve.ts  session.ts  setup.ts  state.ts  status.ts  tmux.ts  update.ts
test/: automation.test.mjs  cli-characterization.test.mjs  dev-config.test.mjs  feishu-bridge.test.mjs  hosts.test.mjs  mobile-android.test.mjs  relay-agent-extension-v1-authority.test.mjs  relay-agent-extension-v1-codex-app-server-notification-source.test.mjs  relay-agent-extension-v1-codex-app-server-process-controller-authority.test.mjs  relay-agent-extension-v1-codex-app-server-producer.test.mjs  relay-agent-extension-v1-codex-app-server-trusted-source-activation.test.mjs  relay-agent-extension-v1-codex-trusted-source-composition.test.mjs  relay-agent-extension-v1-contract.test.mjs  relay-agent-extension-v1-store-runtime.test.mjs  relay-broker-routing.test.mjs  relay-host-lifecycle.test.mjs  relay-host.test.mjs  relay-server.test.mjs  relay-v1-contract.test.mjs  relay-v2-auth.test.mjs  relay-v2-base-cross-owner-composition.test.mjs  relay-v2-broker-authorization-expiry-deadline-owner.test.mjs  relay-v2-broker-client-socket-transport.test.mjs  relay-v2-broker-client-upgrade-dispatch.test.mjs  relay-v2-broker-client-wss-adapter.test.mjs  relay-v2-broker-client-wss-node-listener-free-ingress.test.mjs  relay-v2-broker-client-wss-runtime-composition.test.mjs  relay-v2-broker-core.test.mjs  (+91 more)
(+740 files in other folders)
