[package]
name = "app"
version = "0.9.1"
description = "tmux-worktree dashboard"
authors = ["jiangyunong"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
