[package]
name = "app"
version = "1.0.6"
description = "tmux-worktree dashboard for local and SSH remote TW-managed sessions"
authors = ["tmux-worktree contributors"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
getrandom = "0.3"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
dirs = "5"
png = "0.18"
portable-pty = "0.8"
qrcode = { version = "0.14", default-features = false }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSCell", "NSControl", "NSImage", "NSImageView", "NSResponder", "NSView", "NSWindow"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSData"] }

[dev-dependencies]
tempfile = "3"
