[package]
name = "relay-v2-broker-credential-state-store-core"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[dependencies]
sha2 = "0.10"

[build-dependencies]
serde_json = "1"

[dev-dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
